@@ -134,6 +134,16 @@ to 64x64 pixels.</string>
      </property>
     </widget>
    </item>
+   <item row="4" column="0">
+    <widget class="QLabel" name="labelLabel">
+     <property name="text">
+      <string>Label:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="1">
+    <widget class="QLineEdit" name="label"/>
+   </item>
   </layout>
  </widget>
  <resources/>
